Make the make-a-face button not overlap the Flash component in Firefox, due to display bug in 3.6

--- a/makeaface/makeaface/static/style.sass
+++ b/makeaface/makeaface/static/style.sass
@@ -108,6 +108,10 @@ div#camera, #photo
     width: 100%
     text-align: center
 
+@-moz-document url-prefix()
+    #take-picture-box
+        bottom: 2px
+
 .tp-button
     float: none
     display: inline-block
